--- a/index.html
+++ b/index.html
@@ -212,8 +212,10 @@
           </ul>
         </div>
       </section>
+
+
       <section class="team section">
-        <div class="container">
+        <div class="container container-mini">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-item">
@@ -392,7 +394,7 @@
         </div>
       </section>
       <section class="customers section">
-        <div class="container">
+        <div class="container container-mini">
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-list">
             <li class="customers-item">
